tdf#125415 vcl menu floating window: avoid flicker

This is similar to e8d5b8beb5958147235ff955ed38c47b51d860ff (tdf#113714
vcl menu bar window: avoid flicker, 2019-05-20), except that was for the
menu bar window, and this is for the floating window opening from that
one.

Change-Id: Ib24f4999ad3e8cbbecc058368e9d112e106e9178